refactoring the lookup API, use service loader