@@ -5,81 +5,29 @@
  */
 package io.kroxylicious.proxy.config.substitution.lookup;
 
-import java.util.Collections;
+import java.util.Locale;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 /**
  * Proxies other {@link StringLookup}s using a keys within ${} markers using the format "${StringLookup:Key}".
- * <p>
- * Uses the {@link StringLookupFactory default lookups}.
- * </p>
  */
 class InterpolatorStringLookup implements StringLookup {
 
-    /**
-     * Defines the singleton for this class.
-     *
-     * @since 1.6
-     */
-    static final StringLookup INSTANCE = new InterpolatorStringLookup();
-
     /** Constant for the prefix separator. */
     private static final char PREFIX_SEPARATOR = ':';
-
-    /** The default string lookup. */
-    private final StringLookup defaultStringLookup;
 
     /** The map of String lookups keyed by prefix. */
     private final Map<String, StringLookup> stringLookupMap;
 
     /**
-     * Constructs an instance using only lookups that work without initial properties and are stateless.
-     * <p>
-     * Uses the {@link StringLookupFactory default lookups}.
-     * </p>
-     */
-    InterpolatorStringLookup() {
-        this((Map<String, String>) null);
-    }
-
-    /**
      * Constructs a fully customized instance.
      *
      * @param stringLookupMap the map of string lookups.
-     * @param defaultStringLookup the default string lookup.
-     * @param addDefaultLookups whether the default lookups should be used.
      */
-    InterpolatorStringLookup(final Map<String, StringLookup> stringLookupMap, final StringLookup defaultStringLookup,
-                             final boolean addDefaultLookups) {
-        this.defaultStringLookup = defaultStringLookup;
-        this.stringLookupMap = stringLookupMap.entrySet().stream().collect(Collectors.toMap(e -> StringLookupFactory.toKey(e.getKey()), Entry::getValue));
-        if (addDefaultLookups) {
-            StringLookupFactory.INSTANCE.addDefaultStringLookups(this.stringLookupMap);
-        }
-    }
-
-    /**
-     * Constructs an instance using only lookups that work without initial properties and are stateless.
-     * <p>
-     * Uses the {@link StringLookupFactory default lookups}.
-     * </p>
-     *
-     * @param <V> the map's value type.
-     * @param defaultMap the default map for string lookups.
-     */
-    <V> InterpolatorStringLookup(final Map<String, V> defaultMap) {
-        this(StringLookupFactory.INSTANCE.mapStringLookup(defaultMap));
-    }
-
-    /**
-     * Constructs an instance with the given lookup.
-     *
-     * @param defaultStringLookup the default lookup.
-     */
-    InterpolatorStringLookup(final StringLookup defaultStringLookup) {
-        this(Collections.emptyMap(), defaultStringLookup, true);
+    InterpolatorStringLookup(final Map<String, StringLookup> stringLookupMap) {
+        Objects.requireNonNull(stringLookupMap);
+        this.stringLookupMap = Map.copyOf(stringLookupMap);
     }
 
     /**
@@ -99,7 +47,7 @@ class InterpolatorStringLookup implements StringLookup {
 
         final int prefixPos = key.indexOf(PREFIX_SEPARATOR);
         if (prefixPos >= 0) {
-            final String prefix = StringLookupFactory.toKey(key.substring(0, prefixPos));
+            final String prefix = key.substring(0, prefixPos).toLowerCase(Locale.ROOT);
             final String name = key.substring(prefixPos + 1);
             final StringLookup lookup = stringLookupMap.get(prefix);
             String value = null;
@@ -110,17 +58,12 @@ class InterpolatorStringLookup implements StringLookup {
             if (value != null) {
                 return value;
             }
-            key = key.substring(prefixPos + 1);
-        }
-        if (defaultStringLookup != null) {
-            return defaultStringLookup.lookup(key);
         }
         return null;
     }
 
     @Override
     public String toString() {
-        return super.toString() + " [stringLookupMap=" + stringLookupMap + ", defaultStringLookup="
-                + defaultStringLookup + "]";
+        return super.toString() + " [stringLookupMap=" + stringLookupMap + "]";
     }
 }
